# coder-EstebanAcevedo

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml  ruff.toml
src/: .env  db.sqlite3
src/cliente/: admin.py  models.py  views.py
src/cliente/migrations/: 0001_initial.py  0002_pais_cliente_nacimiento_cliente_pais_origen.py
src/cliente/templates/cliente/: cliente_list.html  index.html  pais_list.html
src/config/: settings.py  settings_dev.py  urls.py
src/core/: urls.py  views.py
src/core/templates/core/: about.html  base-tmp.html  base.html  dados.html  ejercicio-1.html  ejercicio-2.html  index.html  login.html  logout.html  notas.html  profile.html  register.html
src/core/templates/core/componentes/: footer.html  navbar.html
src/producto/: forms.py  models.py  urls.py  views.py
src/producto/migrations/: 0001_initial.py  0002_alter_categoria_options_alter_categoria_nombre.py  0003_categoria_descripcion.py  0004_alter_categoria_descripcion_producto.py  0005_vendedor_venta.py
src/producto/templates/producto/: categoria_confirm_delete.html  categoria_detail.html  categoria_form.html  categoria_list.html  index.html  lista_productos.html  producto_confirm_delete.html  producto_detail.html  producto_form.html  producto_list.html  vendedor_confirm_delete.html  vendedor_detail.html  vendedor_form.html  vendedor_list.html  venta_detail.html  venta_form.html  venta_list.html
src/producto/views_models/: categoria.py  producto.py  vendedor.py  venta.py
