[project]
name = "coder-estebanacevedo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-widget-tweaks>=1.5.0",
    "django>=5.1.3",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "djhtml>=3.0.7",
    "ipython>=8.29.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
]

